# rbdc

./: .gitignore  Cargo.toml  README.md
benches/: exchange.rs
example/: Cargo.toml
example/src/: duckdb.rs  mssql.rs  mysql.rs  pg.rs  sqlite.rs  turso.rs
rbdc-duckdb/: Cargo.toml  Readme.md
rbdc-duckdb/src/: driver.rs  error.rs  lib.rs  meta_data.rs  row.rs
rbdc-duckdb/src/connection/: conn.rs  establish.rs  mod.rs  worker.rs
rbdc-duckdb/src/options/: connect.rs  mod.rs
rbdc-duckdb/src/statement/: mod.rs
rbdc-duckdb/src/types/: mod.rs  value.rs
rbdc-duckdb/tests/: stmt_leak_test.rs  types.rs
rbdc-mssql/: Cargo.toml  Readme.md
rbdc-mssql/src/: decode.rs  driver.rs  encode.rs  lib.rs
rbdc-mysql/: Cargo.toml  Readme.md
rbdc-mysql/src/: driver.rs  lib.rs  row.rs  value.rs
rbdc-mysql/src/connection/: establish.rs  executor.rs  mod.rs  stream.rs
rbdc-mysql/src/options/: connect.rs  mod.rs
rbdc-mysql/src/protocol/statement/: row.rs
rbdc-mysql/src/protocol/text/: column.rs
rbdc-mysql/src/types/: date.rs  datetime.rs  decimal.rs  decode.rs  enums.rs  geometry.rs  json.rs  mod.rs  set.rs  time.rs  timestamp.rs  uuid.rs  value.rs  year.rs
rbdc-pg/: Cargo.toml  Readme.md
rbdc-pg/src/: arguments.rs  driver.rs  error.rs  lib.rs  query.rs  row.rs  type_info.rs  value.rs
rbdc-pg/src/connection/: describe.rs  establish.rs  executor.rs  mod.rs  stream.rs
rbdc-pg/src/options/: connect.rs  mod.rs  parse.rs
rbdc-pg/src/types/: array.rs  bigdecimal.rs  bool.rs  byte.rs  date.rs  datetime.rs  decimal.rs  decode.rs  encode.rs  float.rs  hstore.rs  int.rs  json.rs  mod.rs  money.rs  point.rs  string.rs  time.rs  timestamp.rs  timestamptz.rs  timetz.rs  tsquery.rs  tsvector.rs  uuid.rs  value.rs
rbdc-pool-fast/: Cargo.toml
rbdc-pool-fast/src/: lib.rs
rbdc-pool-fast/tests/: get.rs
rbdc-sqlite/: Cargo.toml  Readme.md
rbdc-sqlite/src/: arguments.rs  decode.rs  driver.rs  row.rs  type_info.rs  value.rs
rbdc-sqlite/src/connection/: establish.rs  executor.rs  handle.rs  mod.rs  worker.rs
rbdc-sqlite/src/options/: connect.rs  mod.rs
rbdc-sqlite/src/types/: bool.rs  bytes.rs  float.rs  int.rs  str.rs  uint.rs  value.rs
rbdc-sqlite/tests/: query_stream.rs
rbdc-turso/: Cargo.toml  Readme.md
rbdc-turso/src/: column.rs  driver.rs  error.rs  lib.rs  query_result.rs  row.rs  statement.rs  value.rs
rbdc-turso/src/connection/: executor.rs  mod.rs
rbdc-turso/src/options/: connect.rs  mod.rs
rbdc-turso/src/types/: bool.rs  bytes.rs  float.rs  int.rs  mod.rs  null.rs  str.rs
rbdc-turso/tests/: conformance.rs  connection_core.rs  deviation_tests.rs  deviations.rs  foundation.rs  scope_guards.rs  value_row_parity.rs
rbdc-turso/tests/conformance/: release_gate.rs
rbdc-turso/tests/deviations/: README.md  mod.rs  registry.rs  registry.yaml  validator.rs
rbdc-turso/tests/fixtures/: deviation-candidates.md
src/: db.rs  error.rs  lib.rs  rt.rs
src/common/: statement_cache.rs
src/ext/: async_stream.rs
src/io/: buf.rs  buf_stream.rs  decode.rs  mod.rs  write_and_flush.rs
src/net/tls/: mod.rs  rustls.rs
src/pool/: guard.rs  manager.rs  mod.rs
src/types/: bytes.rs  date.rs  datetime.rs  decimal.rs  json.rs  mod.rs  time.rs  timestamp.rs
src/util/: mod.rs  scan.rs
tests/: base.rs  exec_decode.rs  into_maps.rs  scan_test.rs  types.rs  util.rs
