[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2024"
publish = false

[[bin]]
name = "sqlite"
path = "src/sqlite.rs"
[[bin]]
name = "mssql"
path = "src/mssql.rs"
[[bin]]
name = "mysql"
path = "src/mysql.rs"
[[bin]]
name = "pg"
path = "src/pg.rs"
[[bin]]
name = "turso"
path = "src/turso.rs"
[dependencies]
rbs = "4"
rbdc = {version = "4.9",path = "../"}
rbdc-sqlite = {version = "4.8",path = "../rbdc-sqlite"}
rbdc-mssql = {version = "4.8",path = "../rbdc-mssql"}
rbdc-mysql = {version = "4.8",path = "../rbdc-mysql"}
rbdc-pg = {version = "4.8",path = "../rbdc-pg"}
rbdc-turso = {version = "4.8",path = "../rbdc-turso"}
rbdc-pool-fast = {version = "4.8",path = "../rbdc-pool-fast"}
tokio = { version = "1", features = ["sync", "fs", "net", "rt", "rt-multi-thread", "time", "io-util", "macros"] }

serde = "1"