[package]
name = "rbdc-mssql"
version = "4.7.0"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tls-rustls"]
tls-rustls=["rbdc/tls-rustls","tiberius/rustls"]
tls-native-tls=["rbdc/tls-native-tls","tiberius/native-tls"]
[dependencies]
rbs = { version = "4"}
rbdc = { version = "4.7", path = "../", default-features = false, optional = true }
tiberius = { version = "0.12", default-features = false, features = ["chrono", "bigdecimal", "rust_decimal", "tds73"], optional = true }
tokio = { version = "1", default-features = false ,features = ["net"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
futures-core = { version = "0.3.19", default-features = false }
chrono = "0.4.42"
fastdate = { version = "0.3" }
url = "2.5"
percent-encoding = "2.3"
