[package]
name = "rbdc-mysql"
version = "4.7.1"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tls-rustls"]
tls-rustls=["rbdc/tls-rustls"]
tls-native-tls=["rbdc/tls-native-tls"]
[dependencies]
rbs = { version = "4" }
bytes = "1.1.0"
rbdc = { version = "4.7", path = "../", default-features = false, optional = true }
serde = "1"
bitflags = "2.0.2"
digest = { version = "0.10.7", default-features = false, features = ["std"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.21", features = ["alloc", "sink"] }
rsa = { version = "0.9" }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sha-1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
percent-encoding = "2.1.0"
url = { version = "2.2.2" }
either = "1.7.0"
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
fastdate = { version = "0.3" }
hex = "0.4.3"
serde_json = "1.0"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }